Correction version mobile

--- a/src/views/vmd-rdv.view.scss
+++ b/src/views/vmd-rdv.view.scss
@@ -95,3 +95,6 @@ vmd-appointment-card {
     }
 }
 
+.typev > div > .mb-3{
+    font-size: 0.65em;
+}
